codeRepo/generated/krlParser.py
# Generated from D:/Programowanie/PycharmProjects/KRL_Parser/codeRepo/generated\krl.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class krlParser ( Parser ):

    grammarFileName = "krl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "','", "'{'", "':'", "'}'", "'('", 
                     "')'", "'/R1/'", "'..'", "'['", "']'", "'=='", "'<>'", 
                     "'<='", "'>='", "'<'", "'>'", "'+'", "'-'", "'*'", 
                     "'/'", "'.'", "'#'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "AND", "ANIN", "ANOUT", "B_AND", "B_NOT", "B_OR", 
                      "B_EXOR", "BOOL", "BRAKE", "C_DIS", "C_ORI", "C_PTP", 
                      "C_VEL", "CASE", "CAST_FROM", "CAST_TO", "CHAR", "CIRC_REL", 
                      "CIRC", "CONST", "CONTINUE", "DELAY", "DECL", "DEF", 
                      "DEFAULT", "DEFDAT", "DEFFCT", "DO", "ELSE", "END", 
                      "ENDDAT", "ENDFCT", "ENDFOR", "ENDIF", "ENDLOOP", 
                      "ENDSWITCH", "ENDWHILE", "ENUM", "EXIT", "EXT", "EXTFCT", 
                      "FALSE", "FOR", "GLOBAL", "GOTO", "HALT", "IF", "IMPORT", 
                      "INTERRUPT", "INT", "IS", "LIN_REL", "LIN", "LOOP", 
                      "MAXIMUM", "MINIMUM", "NOT", "OR", "PRIO", "PTP_REL", 
                      "PTP", "PUBLIC", "REAL", "REPEAT", "RETURN", "SEC", 
                      "SIGNAL", "STRUC", "SWITCH", "THEN", "TO", "TRIGGER", 
                      "TRUE", "UNTIL", "WAIT", "WHEN", "WHILE", "EXOR", 
                      "HEADERLINE", "WS", "NEWLINE", "LINE_COMMENT", "CHARLITERAL", 
                      "STRINGLITERAL", "FLOATLITERAL", "INTLITERAL", "IDENTIFIER" ]

    RULE_module = 0
    RULE_moduleRoutines = 1
    RULE_mainRoutine = 2
    RULE_subRoutine = 3
    RULE_procedureDefinition = 4
    RULE_procedureName = 5
    RULE_functionDefinition = 6
    RULE_functionName = 7
    RULE_moduleData = 8
    RULE_moduleName = 9
    RULE_dataList = 10
    RULE_arrayInitialisation = 11
    RULE_typeDeclaration = 12
    RULE_structureDefinition = 13
    RULE_enumDefinition = 14
    RULE_enumValue = 15
    RULE_variableDeclaration = 16
    RULE_signalDeclaration = 17
    RULE_variableDeclarationInDataList = 18
    RULE_variableListRest = 19
    RULE_variableInitialisation = 20
    RULE_structLiteral = 21
    RULE_structElementList = 22
    RULE_structElement = 23
    RULE_formalParameters = 24
    RULE_parameter = 25
    RULE_routineBody = 26
    RULE_routineDataSection = 27
    RULE_forwardDeclaration = 28
    RULE_formalParametersWithType = 29
    RULE_parameterWithType = 30
    RULE_parameterCallType = 31
    RULE_importStatement = 32
    RULE_variableName = 33
    RULE_arrayVariableSuffix = 34
    RULE_routineImplementationSection = 35
    RULE_statementList = 36
    RULE_statement = 37
    RULE_ptpMoveStatement = 38
    RULE_linMoveStatement = 39
    RULE_linRelMoveStatement = 40
    RULE_analogOutputStatement = 41
    RULE_analogInputStatement = 42
    RULE_switchBlockStatementGroups = 43
    RULE_caseLabel = 44
    RULE_defaultLabel = 45
    RULE_expressionList = 46
    RULE_assignmentExpression = 47
    RULE_expression = 48
    RULE_relationalOp = 49
    RULE_conditionalOrExpression = 50
    RULE_exclusiveOrExpression = 51
    RULE_conditionalAndExpression = 52
    RULE_additiveExpression = 53
    RULE_multiplicativeExpression = 54
    RULE_geometricExpression = 55
    RULE_unaryNotExpression = 56
    RULE_unaryPlusMinuxExpression = 57
    RULE_primary = 58
    RULE_parExpression = 59
    RULE_typeVar = 60
    RULE_typeName = 61
    RULE_primitiveType = 62
    RULE_arguments = 63
    RULE_literal = 64
    RULE_enumElement = 65

    ruleNames =  [ "module", "moduleRoutines", "mainRoutine", "subRoutine", 
                   "procedureDefinition", "procedureName", "functionDefinition", 
                   "functionName", "moduleData", "moduleName", "dataList", 
                   "arrayInitialisation", "typeDeclaration", "structureDefinition", 
                   "enumDefinition", "enumValue", "variableDeclaration", 
                   "signalDeclaration", "variableDeclarationInDataList", 
                   "variableListRest", "variableInitialisation", "structLiteral", 
                   "structElementList", "structElement", "formalParameters", 
                   "parameter", "routineBody", "routineDataSection", "forwardDeclaration", 
                   "formalParametersWithType", "parameterWithType", "parameterCallType", 
                   "importStatement", "variableName", "arrayVariableSuffix", 
                   "routineImplementationSection", "statementList", "statement", 
                   "ptpMoveStatement", "linMoveStatement", "linRelMoveStatement", 
                   "analogOutputStatement", "analogInputStatement", "switchBlockStatementGroups", 
                   "caseLabel", "defaultLabel", "expressionList", "assignmentExpression", 
                   "expression", "relationalOp", "conditionalOrExpression", 
                   "exclusiveOrExpression", "conditionalAndExpression", 
                   "additiveExpression", "multiplicativeExpression", "geometricExpression", 
                   "unaryNotExpression", "unaryPlusMinuxExpression", "primary", 
                   "parExpression", "typeVar", "typeName", "primitiveType", 
                   "arguments", "literal", "enumElement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    AND=24
    ANIN=25
    ANOUT=26
    B_AND=27
    B_NOT=28
    B_OR=29
    B_EXOR=30
    BOOL=31
    BRAKE=32
    C_DIS=33
    C_ORI=34
    C_PTP=35
    C_VEL=36
    CASE=37
    CAST_FROM=38
    CAST_TO=39
    CHAR=40
    CIRC_REL=41
    CIRC=42
    CONST=43
    CONTINUE=44
    DELAY=45
    DECL=46
    DEF=47
    DEFAULT=48
    DEFDAT=49
    DEFFCT=50
    DO=51
    ELSE=52
    END=53
    ENDDAT=54
    ENDFCT=55
    ENDFOR=56
    ENDIF=57
    ENDLOOP=58
    ENDSWITCH=59
    ENDWHILE=60
    ENUM=61
    EXIT=62
    EXT=63
    EXTFCT=64
    FALSE=65
    FOR=66
    GLOBAL=67
    GOTO=68
    HALT=69
    IF=70
    IMPORT=71
    INTERRUPT=72
    INT=73
    IS=74
    LIN_REL=75
    LIN=76
    LOOP=77
    MAXIMUM=78
    MINIMUM=79
    NOT=80
    OR=81
    PRIO=82
    PTP_REL=83
    PTP=84
    PUBLIC=85
    REAL=86
    REPEAT=87
    RETURN=88
    SEC=89
    SIGNAL=90
    STRUC=91
    SWITCH=92
    THEN=93
    TO=94
    TRIGGER=95
    TRUE=96
    UNTIL=97
    WAIT=98
    WHEN=99
    WHILE=100
    EXOR=101
    HEADERLINE=102
    WS=103
    NEWLINE=104
    LINE_COMMENT=105
    CHARLITERAL=106
    STRINGLITERAL=107
    FLOATLITERAL=108
    INTLITERAL=109
    IDENTIFIER=110

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ModuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(krlParser.EOF, 0)

        def moduleData(self):
            return self.getTypedRuleContext(krlParser.ModuleDataContext,0)


        def moduleRoutines(self):
            return self.getTypedRuleContext(krlParser.ModuleRoutinesContext,0)


        def getRuleIndex(self):
            return krlParser.RULE_module

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule" ):
                return visitor.visitModule(self)
            else:
                return visitor.visitChildren(self)




    def module(self):

        localctx = krlParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_module)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [krlParser.DEFDAT]:
                self.state = 132
                self.moduleData()
                pass
            elif token in [krlParser.DEF, krlParser.DEFFCT, krlParser.GLOBAL]:
                self.state = 133
                self.moduleRoutines()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 136
            self.match(krlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleRoutinesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainRoutine(self):
            return self.getTypedRuleContext(krlParser.MainRoutineContext,0)


        def subRoutine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(krlParser.SubRoutineContext)
            else:
                return self.getTypedRuleContext(krlParser.SubRoutineContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(krlParser.NEWLINE)
            else:
                return self.getToken(krlParser.NEWLINE, i)

        def getRuleIndex(self):
            return krlParser.RULE_moduleRoutines

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModuleRoutines" ):
                return visitor.visitModuleRoutines(self)
            else:
                return visitor.visitChildren(self)




    def moduleRoutines(self):

        localctx = krlParser.ModuleRoutinesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_moduleRoutines)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.mainRoutine()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 47)) & ~0x3f) == 0 and ((1 << (_la - 47)) & ((1 << (krlParser.DEF - 47)) | (1 << (krlParser.DEFFCT - 47)) | (1 << (krlParser.GLOBAL - 47)) | (1 << (krlParser.NEWLINE - 47)))) != 0):
                self.state = 141
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [krlParser.DEF, krlParser.DEFFCT, krlParser.GLOBAL]:
                    self.state = 139
                    self.subRoutine()
                    pass
                elif token in [krlParser.NEWLINE]:
                    self.state = 140
                    self.match(krlParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainRoutineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def procedureDefinition(self):
            return self.getTypedRuleContext(krlParser.ProcedureDefinitionContext,0)


        def functionDefinition(self):
            return self.getTypedRuleContext(krlParser.FunctionDefinitionContext,0)


        def getRuleIndex(self):
            return krlParser.RULE_mainRoutine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainRoutine" ):
                return visitor.visitMainRoutine(self)
            else:
                return visitor.visitChildren(self)




    def mainRoutine(self):

        localctx = krlParser.MainRoutineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mainRoutine)
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.procedureDefinition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.functionDefinition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubRoutineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def procedureDefinition(self):
            return self.getTypedRuleContext(krlParser.ProcedureDefinitionContext,0)


        def functionDefinition(self):
            return self.getTypedRuleContext(krlParser.FunctionDefinitionContext,0)


        def getRuleIndex(self):
            return krlParser.RULE_subRoutine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubRoutine" ):
                return visitor.visitSubRoutine(self)
            else:
                return visitor.visitChildren(self)




    def subRoutine(self):

        localctx = krlParser.SubRoutineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_subRoutine)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.procedureDefinition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.functionDefinition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(krlParser.DEF, 0)

        def procedureName(self):
            return self.getTypedRuleContext(krlParser.ProcedureNameContext,0)


        def formalParameters(self):
            return self.getTypedRuleContext(krlParser.FormalParametersContext,0)


        def NEWLINE(self):
            return self.getToken(krlParser.NEWLINE, 0)

        def routineBody(self):
            return self.getTypedRuleContext(krlParser.RoutineBodyContext,0)


        def END(self):
            return self.getToken(krlParser.END, 0)

        def GLOBAL(self):
            return self.getToken(krlParser.GLOBAL, 0)

        def getRuleIndex(self):
            return krlParser.RULE_procedureDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureDefinition" ):
                return visitor.visitProcedureDefinition(self)
            else:
                return visitor.visitChildren(self)




    def procedureDefinition(self):

        localctx = krlParser.ProcedureDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_procedureDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==krlParser.GLOBAL:
                self.state = 154
                self.match(krlParser.GLOBAL)


            self.state = 157
            self.match(krlParser.DEF)
            self.state = 158
            self.procedureName()
            self.state = 159
            self.formalParameters()
            self.state = 160
            self.match(krlParser.NEWLINE)
            self.state = 161
            self.routineBody()
            self.state = 162
            self.match(krlParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(krlParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return krlParser.RULE_procedureName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureName" ):
                return visitor.visitProcedureName(self)
            else:
                return visitor.visitChildren(self)




    def procedureName(self):

        localctx = krlParser.ProcedureNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_procedureName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(krlParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFFCT(self):
            return self.getToken(krlParser.DEFFCT, 0)

        def typeVar(self):
            return self.getTypedRuleContext(krlParser.TypeVarContext,0)


        def functionName(self):
            return self.getTypedRuleContext(krlParser.FunctionNameContext,0)


        def formalParameters(self):
            return self.getTypedRuleContext(krlParser.FormalParametersContext,0)


        def NEWLINE(self):
            return self.getToken(krlParser.NEWLINE, 0)

        def routineBody(self):
            return self.getTypedRuleContext(krlParser.RoutineBodyContext,0)


        def ENDFCT(self):
            return self.getToken(krlParser.ENDFCT, 0)

        def GLOBAL(self):
            return self.getToken(krlParser.GLOBAL, 0)

        def getRuleIndex(self):
            return krlParser.RULE_functionDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




